// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsx-loader handler custom attrs emptyImageClass transform case 0 1`] = `
{
  "__mergedMap": null,
  "code": "import { View } from "@tarojs/components";
import "./index.scss";
import { jsx as _jsx } from "react/jsx-runtime";
import { Fragment as _Fragment } from "react/jsx-runtime";
var Index = function Index() {
  return /*#__PURE__*/_jsx(_Fragment, {
    children: /*#__PURE__*/_jsx(View, {
      emptyImageClass: "w-_bl_404px_br_ h-_bl_337px_br_ bg-_bl__h_fff_br_"
    })
  });
};
export default Index;",
  "decodedMap": undefined,
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`jsx-loader handler new react jsx normal case 0 1`] = `
{
  "__mergedMap": null,
  "code": "import { View } from '@tarojs/components';
import { jsx as _jsx } from "react/jsx-runtime";
import { jsxs as _jsxs } from "react/jsx-runtime";
var Index = function Index() {
  return /*#__PURE__*/_jsxs(View, {
    className: "_bl__am___d_u-count-down_bs___bs__text_br__c__i_text-red-400",
    children: [/*#__PURE__*/_jsx(View, {}), /*#__PURE__*/_jsx(View, {}), /*#__PURE__*/_jsx(View, {}), /*#__PURE__*/_jsx(View, {}), /*#__PURE__*/_jsx(View, {
      children: /*#__PURE__*/_jsx(View, {
        className: "u-count-down__text",
        children: "u-count-down__text"
      })
    })]
  });
};
export default Index;",
  "decodedMap": undefined,
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`jsx-loader handler new react jsx normal case 1 1`] = `
{
  "__mergedMap": null,
  "code": "import { View } from '@tarojs/components';
import { jsx as _jsx } from "react/jsx-runtime";
import { jsxs as _jsxs } from "react/jsx-runtime";
export default function Index() {
  return /*#__PURE__*/_jsxs(View, {
    children: [/*#__PURE__*/_jsx(View, {
      className: "after_c_content-_bl__dq__a__dq__br_ after_c_ml-0_d_5 after_c_text-red-500"
    }), /*#__PURE__*/_jsx(View, {
      className: "after_c_content-_bl__a__br_ after_c_ml-0_d_5 after_c_text-red-500"
    })]
  });
}",
  "decodedMap": undefined,
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`jsx-loader handler new react jsx normal case 2 1`] = `
{
  "__mergedMap": null,
  "code": "import { View } from '@tarojs/components';
import { jsx as _jsx } from "react/jsx-runtime";
export default (function () {
  return /*#__PURE__*/_jsx(View, {
    className: "bg-_bl__h_654321_br_ w-_bl_100px_br_ h-_bl_20px_br_",
    children: "123"
  });
});",
  "decodedMap": undefined,
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`jsx-loader handler new vue2 jsx normal case 1`] = `
{
  "__mergedMap": null,
  "code": "import Vue from 'vue';
import { View, Button } from '@tarojs/components';
export default Vue.extend({
  components: {
    View: View,
    Button: Button
  },
  render: function render() {
    var h = arguments[0];
    return h(View, {
      "class": 'text-amber-300'
    }, [h(View, {
      "class": "text-center text-_bl_50px_br_ text-_bl__h_123456_br_ mt-_bl_22px_br_",
      "attrs": {
        "hover-class": "text-_bl__h_654321_br_"
      }
    }, ["aaa"]), h(Button, {
      "attrs": {
        "type": 'primary',
        "block": true
      }
    }, ["first"])]);
  }
});",
  "decodedMap": undefined,
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`jsx-loader handler new vue3 jsx normal case 1`] = `
{
  "__mergedMap": null,
  "code": "import { createVNode as _createVNode, createTextVNode as _createTextVNode } from "vue";
import { defineComponent } from 'vue';
import { View, Button } from '@tarojs/components';
export default defineComponent({
  components: {
    View: View,
    Button: Button
  },
  setup: function setup(props, ctx) {
    return function () {
      return _createVNode(View, {
        "class": 'text-amber-300'
      }, {
        default: function _default() {
          return [_createVNode(View, {
            "class": "text-center text-_bl_50px_br_ text-_bl__h_123456_br_ mt-_bl_22px_br_",
            "hover-class": "text-_bl__h_654321_br_"
          }, {
            default: function _default() {
              return [_createTextVNode("components ui")];
            }
          })];
        }
      });
    };
  }
});",
  "decodedMap": undefined,
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`jsx-loader handler vue3 jsx normal case 1`] = `
{
  "__mergedMap": null,
  "code": "import { createVNode as _createVNode, createTextVNode as _createTextVNode } from "vue";
import { defineComponent } from 'vue';
import { View, Button } from '@tarojs/components';
export default defineComponent({
  components: {
    View: View,
    Button: Button
  },
  setup: function setup(props, ctx) {
    return function () {
      return _createVNode(View, {
        "class": 'text-amber-300'
      }, {
        default: function _default() {
          return [_createVNode(View, {
            "class": "text-center text-_bl_50px_br_ text-_bl__h_123456_br_ mt-_bl_22px_br_",
            "hover-class": "text-_bl__h_654321_br_"
          }, {
            default: function _default() {
              return [_createTextVNode("components ui")];
            }
          })];
        }
      });
    };
  }
});",
  "decodedMap": undefined,
  "map": null,
  "rawMappings": undefined,
}
`;
